force-app/main/default/objects/OI_TD_Scan__c/OI_TD_Scan__c.object-meta.xml
<CustomObject>
    <label>OI TD Scan</label>
    <pluralLabel>OI TD Scans</pluralLabel>
    <nameField>
        <label>OI TD Scan Number</label>
        <type>AutoNumber</type>
        <displayFormat>TDS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >One row per Tech Debt scan of the running org. Application-internal; access is gated at the Apex boundary (OI_TD_Controller).</description>
</CustomObject>