force-app/main/default/objects/OI_TD_Scan__c/fields/Category_Scores__c.field-meta.xml
<CustomField>
    <fullName>Category_Scores__c</fullName>
    <label>Category Scores</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>