force-app/main/default/objects/OI_TD_Scan__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>