force-app/main/default/objects/OI_TD_Scan__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>