force-app/main/default/objects/OI_TD_Scan__c/fields/Section_Results__c.field-meta.xml
<CustomField>
    <fullName>Section_Results__c</fullName>
    <label>Section Results</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>