force-app/main/default/objects/OI_TD_Scan__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>