force-app/main/default/objects/OI_TD_Scan__c/fields/Total_Findings__c.field-meta.xml
<CustomField>
    <fullName>Total_Findings__c</fullName>
    <label>Total Findings</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>