force-app/main/default/objects/OI_TD_Scan__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Text</type>
    <length>20</length>
</CustomField>